--- a/package.json
+++ b/package.json
@@ -13,27 +13,30 @@
     "email": "fknussel@gmail.com"
   },
   "scripts": {
-    "development": "cp views/index.html public/index.html && NODE_ENV=development webpack && webpack-dev-server --content-base public/ --hot --inline --devtool inline-source-map --history-api-fallback",
-    "production": "rm -rf public/index.html && NODE_ENV=production webpack -p && NODE_ENV=production node app.js",
+    "clean": ". ./bin/clean.sh",
+    "build:assets": ". ./bin/assets.sh",
+    "build:sass": ". ./bin/sass.sh",
+    "build": ". ./bin/build.sh",
+    "development": ". ./bin/development.sh",
+    "production": ". ./bin/production.sh",
     "start": "npm run production"
   },
   "dependencies": {
-    "babel": "^5.8.29",
-    "babel-core": "^5.8.32",
-    "babel-loader": "^5.3.2",
-    "cosmicjs": "^2.0.0",
+    "babel": "^5.8.38",
+    "babel-core": "^5.8.38",
+    "babel-loader": "^5.4.0",
     "events": "^1.1.0",
-    "express": "^4.13.3",
-    "flux": "^2.1.1",
-    "history": "^1.14.0",
+    "express": "^4.13.4",
+    "history": "^1.17.0",
     "hogan-express": "^0.5.2",
     "lodash": "^3.10.1",
-    "react": "^0.14.1",
-    "react-dom": "^0.14.1",
-    "react-router": "^1.0.1",
-    "webpack": "^1.12.2"
+    "react": "^0.14.8",
+    "react-dom": "^0.14.8",
+    "react-router": "^1.0.3",
+    "webpack": "^1.13.0"
   },
   "devDependencies": {
+    "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
     "webpack-dev-server": "^1.12.1"
   }
